--- a/gb/20/11/3/n12521463.md
+++ b/gb/20/11/3/n12521463.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yozhpj396/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yozhpj396/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yozhpj396/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yozhpj396/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yozhpj396/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yozhpj396/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yozhpj396/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yozhpj396/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】中共迫害习仲勋 求情只有俩国军（下）</h2>
-<a href="https://git.io/JkBFM"><img width="600" src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yozhpj396/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d14a0yccee2yym.cloudfront.net/N7wrdhLtz"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>错上贼船？习仲勋在文革期间遭康生陷害时，是邓宝珊和张治中向老毛求情。为何张治中这个前国军高级将领在文革中抑郁而终？（公有领域／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年11月17日讯】各位看官好，咱们书接<ahref=><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/2/n12518971.md#1">上集</a>，说说另一个替<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E4%B9%A0%E4%BB%B2%E5%8B%8B.md#1">习仲勋</a>向老毛求情的<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E5%9B%BD%E5%86%9B.md#1">国军</a>叛将。这位更有名，官也更大，危害也巨，下场也惨。这位就是张治中。</p>
-<p><center><a src=""></a><a href="https://git.io/JkBFM"><img width="600" src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yozhpj396/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/ZEXeOcQ7c4Y" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>张治中，原<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E5%9B%BD%E5%86%9B.md#1">国军</a>陆军二级上将，<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>四大心腹之一。在任湖南省政府主席兼保安司令的时候，因涉嫌火烧长沙而引起公愤，蒋介石曾经怒责：“长沙焚毁，精神上之打击，千百倍于战败之痛苦，可耻可悲，莫此为甚。”</p>
+	<p>【大纪元2020年11月17日讯】各位看官好，咱们书接<ahref=><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/2/n12518971.md#1">上集</a>，说说另一个替<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E4%BB%B2%E5%8B%8B.md#1">习仲勋</a>向老毛求情的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E5%86%9B.md#1">国军</a>叛将。这位更有名，官也更大，危害也巨，下场也惨。这位就是张治中。</p>
+<p><center><a src=""></a><a href="https://d14a0yccee2yym.cloudfront.net/N7wrdhLtz"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/ZEXeOcQ7c4Y" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>张治中，原<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E5%86%9B.md#1">国军</a>陆军二级上将，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>四大心腹之一。在任湖南省政府主席兼保安司令的时候，因涉嫌火烧长沙而引起公愤，蒋介石曾经怒责：“长沙焚毁，精神上之打击，千百倍于战败之痛苦，可耻可悲，莫此为甚。”</p>
 <p>顺带提两句“长沙大火”，不然各位可能有问号。1938年10月武汉沦陷于日寇之手，长沙危机，最早李宗仁提出的“焦土抗战论”得到国民政府高层认同，就是你日军占领城市，想得到补给，继续扩大侵华战果，没门，我方宁可主动烧毁家园，也不能让你得逞。不巧的是，长沙守将张治中本来已经安排好了放火烧城的时间和步骤，却因为11月13日凌晨城内的天心阁失了火，被执行烧成任务的部队看到误以为日寇迫近，是长官信号发出。这是一种说法，还有一说法就是：11月10日日军攻陷湖南岳阳，12日向岳阳以南离长沙250华里的新墙河进犯，结果国军译电员竟将电讯漏掉一个“墙”字，“新墙河”变成离长沙仅有12华里的“新河”。您瞧，这是多闹心的事啊。接到电报的长沙警备司令部、警察局和警备二团误以为日军马上就到了，便仓促放火。其实这时候，日军离长沙还有二百多里地呢。</p>
 <p>半夜提前放火，致使全城很多百姓没能逃出来，火一起，张治中的电话也打不通了，没法问情况，也没法下命令。最后，大火烧了五天五夜，将绵延几公里的长沙古城烧为灰烬。三万多人丧生，5.6万栋房屋焚毁。</p>
 <p>然而，损失如此之大，蒋公却并没有枪毙张治中，只是将他革职。足见蒋当时珍惜张到了何等程度。我们还有一个更不可思议的发现，张治中竟然是自始至终没有和共军打过一仗的国军将军，这还不算，他还在最后背叛蒋公投共，并帮助中共夺取了政权。看官，您不觉得这位有点那个吗？</p>
 <p>这事咱还得再讲几句。1945年8月抗战胜利后，为避免战火再起，老蒋邀请老毛到重庆谈判，张治中亲自去延安接毛赴重庆，完后又把毛送回延安。张治中作为国民政府代表，跟周恩来和美国总统特使马歇尔组成三人小组，负责国共双方的军事整编。您想不到的是，此时的张治中竟然私下经常向马歇尔抱怨国民政府，替中共宣传，这在客观上推动了美国对国民政府的不信任，对其腐败的厌恶，从而让美国在军事上减少了对蒋的援助。放到现在，我们相信肯定有看官可能会质问：张治中，你到底哪伙的呀？根本就是屁股坐歪到姥姥家了嘛！</p>
-<p>三年内战中，内有共谍，外有媚共将领，加之军事失误、组织松散、内部腐败等等原因，国民党1949年初败局已显。此时，国民政府想与中共和谈，提出的方针有反对中共渡江、“划江而治”什么的。当年4月1日，代总统李宗仁又派了亲共的张治中、邵力子、章士钊等六人组团赴北平与共党谈判。但毛此时夺权之心急迫，已经毫无诚意，于是4月13日，张治中发电报给李宗仁代总统和行政院长何应钦说：周恩来今日当面交付“国内和平协议”一件，“内分八条，二十四款”。其中竟然包含共党居高临下提出的“惩办战争罪犯”和“解放军渡江”条款，接着张又给<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>发了一个电报，说中国<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>的言论和态度，都是在逼降。末了他还劝蒋公“毅然放下一切”，口气竟像是在替共党劝降。李宗仁最终没有签署所谓协议，何应钦更对共党所提八条二十四款断然拒绝。蒋公在家乡溪口也是气坏了，怒斥张治中“无能，丧权辱国”。</p>
-<p>知道了结果，到4月23日，国府和谈代表团长张治中、代表邵力子等居然叛变投共。对国府给予的信任以极大讽刺。张治中留在了北平，6月宣布脱离国民党。同时叛变的邵力子其实底子很潮，还是早年和陈独秀一起创立<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>的人物之一，做过黄埔军校秘书长，但却在1926年退出了中共。</p>
+<p>三年内战中，内有共谍，外有媚共将领，加之军事失误、组织松散、内部腐败等等原因，国民党1949年初败局已显。此时，国民政府想与中共和谈，提出的方针有反对中共渡江、“划江而治”什么的。当年4月1日，代总统李宗仁又派了亲共的张治中、邵力子、章士钊等六人组团赴北平与共党谈判。但毛此时夺权之心急迫，已经毫无诚意，于是4月13日，张治中发电报给李宗仁代总统和行政院长何应钦说：周恩来今日当面交付“国内和平协议”一件，“内分八条，二十四款”。其中竟然包含共党居高临下提出的“惩办战争罪犯”和“解放军渡江”条款，接着张又给<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>发了一个电报，说中国<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>的言论和态度，都是在逼降。末了他还劝蒋公“毅然放下一切”，口气竟像是在替共党劝降。李宗仁最终没有签署所谓协议，何应钦更对共党所提八条二十四款断然拒绝。蒋公在家乡溪口也是气坏了，怒斥张治中“无能，丧权辱国”。</p>
+<p>知道了结果，到4月23日，国府和谈代表团长张治中、代表邵力子等居然叛变投共。对国府给予的信任以极大讽刺。张治中留在了北平，6月宣布脱离国民党。同时叛变的邵力子其实底子很潮，还是早年和陈独秀一起创立<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>的人物之一，做过黄埔军校秘书长，但却在1926年退出了中共。</p>
 <p>看官，您先别起疑，一会儿就明白了。1949年1月16日，蒋公邀约有关人员讨论时局，会上，担任过陕西省政府主席、国民党中央宣传部长、驻苏联大使的邵力子公然主张向共产党“无条件投降”。邵2月份还去石家庄见过老毛，之后，却又被国府派为谈判代表。最后，得知南京拒绝共党协议，立马和张治中同时叛变。而且当年就被共党选为第一届政协委员。根据邵某的言行轨迹，我们高度怀疑这货就是个隐藏多年的共谍。蒋公身边埋伏了如此多的炸弹，难怪那么快就丢了江山，我想大伙跟我一样，只能无语了。</p>
 <p>扯远了，接着说张。张治中在北平投共之后，还嫌不够劲儿，功立得不够大，就又去劝说新疆国军守军不战而降，因为张曾经做过国府新疆主席，有根底，帮中共拿回西北边陲不难，于是又立“新功”。要不然，山高皇帝远，那可不是个容易收复的地方，把在国军手里，哪天再变成国军反共的基地，老毛想想肯定是夜夜睡不好觉的。所以张治中帮了老毛一个大忙。</p>
 <p>中共建政后，张受到毛的礼遇，先后任西北军政委员会副主席、全国人大常委会副委员长、民革中央副主席、和平解放台湾工作委员会主任等职。</p>
@@ -30,51 +30,49 @@
 <p>更无法苟同片尾那个可笑字幕描述，说什么抗战胜利是共产党领导统一战线下取得的。本来姜武、刘晓庆演得还不错，场景有些逼真，特技也有突破，比吴京横店版《战狼》好看一些。但看到这些谎言文字，我一下很可怜导演管虎，也可惜了，史上为国捐躯的88师将士，知道你们身后，司令投降汉奸中共了吗？我们倒宁愿这些英雄是白将军的属下。</p>
 <p>据称，国军一级上将、人称小诸葛的白崇禧将军一生很少说人是非，但最瞧不起张治中。白将军看到北伐战争中汀泗桥之役时，张治中突然当众下跪帮蒋介石擦拭染血的靴子，就说：“后来军中骂人不要脸、拍马屁，就说‘这家伙是擦鞋的’。”听说典故由此而来。张治中身为师长，攻徐州时部队却溃散了，依军法须处死首长，张治中为求免死，在火车站公开绑上白布跪地哀求蒋总饶他一命，蒋看了一时心软，当场下条子说“尚属知耻，记枪毙一次”。</p>
 <p>就这两件事，让白崇禧一辈子瞧不起张治中。白将军最后和蒋公一起退守台湾，1966年12月心脏病发于台北过世，留下一世英名和十名子女，其中，白先勇为台湾著名作家。</p>
-<p>张治中呢，离世后，中共国只是给他举行了遗体告别仪式。时至今日，我们海内外华人同胞还是想知道，张治中将军到死是不是弄明白了，他非常反感的文革，始作俑者正是崇尚斗争和杀戮的毛和中共，他被欺骗了几十年实乃悲剧。走到生命的最后那一刻，他能否反思一下自己的好朋友，如<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E4%B9%A0%E4%BB%B2%E5%8B%8B.md#1">习仲勋</a>那样的共产高官都无法自保，到底这是个怎样的邪恶组织？背叛了尊重、器重自己的国民政府和蒋介石先生他会不会生出一丝后悔呢？</p>
+<p>张治中呢，离世后，中共国只是给他举行了遗体告别仪式。时至今日，我们海内外华人同胞还是想知道，张治中将军到死是不是弄明白了，他非常反感的文革，始作俑者正是崇尚斗争和杀戮的毛和中共，他被欺骗了几十年实乃悲剧。走到生命的最后那一刻，他能否反思一下自己的好朋友，如<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E4%BB%B2%E5%8B%8B.md#1">习仲勋</a>那样的共产高官都无法自保，到底这是个怎样的邪恶组织？背叛了尊重、器重自己的国民政府和蒋介石先生他会不会生出一丝后悔呢？</p>
 <p>故事讲完了，喜欢我们节目的看官，别忘了点赞、订阅。谢谢您的观看，我们下集再见。</p>
-<p>《<ahref="https://github.com/yozhpj396/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/5/15/n10396981.md#1">网曝邓小平整习近平父亲习仲勋的内幕</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/8/8/n10625117.md#1">周晓辉：习仲勋“两条路”讲话与中国现政局</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/4/14/n12030496.md#1">王友群：先整习仲勋后“叛党自杀”的阎红彦</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/10/18/n12484915.md#1">【欺世大观】邱少云死得很争议</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/15/n10396981.md#1">网曝邓小平整习近平父亲习仲勋的内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/8/n10625117.md#1">周晓辉：习仲勋“两条路”讲话与中国现政局</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/14/n12030496.md#1">王友群：先整习仲勋后“叛党自杀”的阎红彦</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/18/n12484915.md#1">【欺世大观】邱少云死得很争议</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10101897.md#1" target="_blank">袁斌：农民运动与中共暴行暴政</a></li><li><a href="https://github.com/yozhpj396/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/10/n12537654.md#1">张爱玲和弟弟 一个最悲凉的手足亲情的故事</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/9/13/n12399763.md#1">既是“于青菜”又是“于青天”——清朝廉吏于成龙</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/3/n12521463.md#1">【欺世大观】中共迫害习仲勋 求情只有俩国军（下）</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/18/n12557446.md#1">【十字路口】中共介入大选 美国新独立战争？</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/17/n12556425.md#1">喉咙痛到吞口水都难受？2个耳穴立刻缓解</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12552183.md#1">【翻墙必看】拜登又一大丑闻曝光 涉奥巴马</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/17/n12554108.md#1">计算“邮寄选票”后反超   纽约众议员布朗斯汀宣布胜选</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12553767.md#1">被央视污言秽语狂骂 蓬佩奥：继续制裁</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12553368.md#1">台研发全球首株抗体 可直接杀死癌细胞</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12552492.md#1">在教堂住12年 英国流浪猫过世获纪念仪式</a></li>
-<li><a href="https://github.com/yozhpj396/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yozhpj396/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yozhpj396/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/3/n12521463.htm">【欺世大观】中共迫害习仲勋 求情只有俩国军（下）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/3/n12521463.htm">【欺世大观】中共迫害习仲勋 求情只有俩国军（下）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yozhpj396/djy/blob/master/gb/20/11/3/n12521463.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yozhpj396/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yozhpj396/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yozhpj396/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yozhpj396/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yozhpj396/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/11/3/n12521463.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
